--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,12 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx3G
+systemProp.file.encoding=UTF-8
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.17.1
-	yarn_mappings=1.17.1+build.38
-	loader_version=0.11.6
+	minecraft_version=1.18.1
+	yarn_mappings=1.18.1+build.22
+	loader_version=0.13.1
 
 # Mod Properties
 	mod_version = 1.0.0
@@ -14,4 +15,4 @@ org.gradle.jvmargs=-Xmx3G
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api (or https://fabricmc.net/versions.html)
-	fabric_version=0.37.2+1.17
+	fabric_version=0.46.1+1.18
