--- a/gradle.properties
+++ b/gradle.properties
@@ -2,17 +2,14 @@
 org.gradle.jvmargs=-Xmx3G
 systemProp.file.encoding=UTF-8
 
-# Fabric Properties
-	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.18.1
-	yarn_mappings=1.18.1+build.22
-	loader_version=0.13.1
+minecraft_version=1.18.2
+yarn_mappings=1.18.2+build.2
+loader_version=0.13.3
+
+#Fabric api
+fabric_version=0.48.0+1.18.2
 
 # Mod Properties
-	mod_version = 1.0.0
+	mod_version = 1.18.2-1.0.1
 	maven_group = ml.pkom
 	archives_base_name = UncraftingTable
-
-# Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api (or https://fabricmc.net/versions.html)
-	fabric_version=0.46.1+1.18
